# AgentCritic

./: .env.example  .gitignore  README.md  adk2_0_expert_patterns.md  adk_2.0_a2a_plan.md  api.py  architecture.excalidraw  config.py  health_check.py  health_check_v2.py  pyproject.toml  requirements.txt  test_api_upload.py  test_topo.py  test_zip.py
code_reviewer/: agent.py  config.py  prompts.py
code_reviewer/knowledge_base/: deprecated_models.json  standards.md
code_reviewer/skills/architecture-validation/: SKILL.md
code_reviewer/skills/bug-fixing/: SKILL.md
code_reviewer/skills/bug_fixing/: SKILL.md
code_reviewer/skills/security-hardening/: SKILL.md
code_reviewer/skills/security_hardening/: SKILL.md
code_reviewer/sub_agents/: __init__.py  adk_expert.py  code_validator_agent.py  critic_agent.py  html_agent.py  ingestion_agent.py  metrics_agent.py  quality_expert.py  reviser_agent.py  security_expert.py  synthesis_agent.py
code_reviewer/templates/: report_template.html
code_reviewer/tools/: __init__.py  artifact_tool.py  docs_tool.py  file_tool.py  github_tool.py
code_reviewer/utils/: compat.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.js  page.js  (+1 more)
v2/: agent.json  agent.py  config.py
v2/knowledge_base/: constitution.md
v2/sub_agents/: adk_expert.py  callbacks.py  code_validator_agent.py  html_agent.py  ingestion_agent.py  metrics_agent.py  quality_expert.py  security_expert.py  synthesis_agent.py
v2/tools/: file_tool.py  github_tool.py  lifecycle_tool.py
(+29 files in other folders)
