[project]
name = "code-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "google-adk>=1.0.0",
    "gradio>=4.44.0",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "requests>=2.31.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.32.0",
]
